# openstudio-mcp-server

./: .dockerignore  .gitignore  CLAUDE.md  CLAUDE_DESKTOP_FIX.md  CLAUDE_DESKTOP_SETUP.md  CONTRIBUTING.md  DEVELOPER_NOTES.md  FILE_ACCESS_GUIDE.md  LICENSE  README.md  TESTING_PROTOCOL.md  USER_GUIDE.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
openstudio-mcp-server/: pyproject.toml
openstudio-mcp-server/illustrative_examples/notebooks/: test_load_osm_model.ipynb
openstudio-mcp-server/openstudio_mcp_server/: __init__.py  config.py  openstudio_tools.py  server.py
openstudio-mcp-server/openstudio_mcp_server/utils/: __init__.py  json_utils.py  path_utils.py
openstudio-mcp-server/openstudio_toolkit/osm_objects/: building.py  constructions.py  controllers.py  hvac_air_loops.py  hvac_sizing.py  materials.py  outputs.py  spaces.py  thermal_zones.py
openstudio-mcp-server/openstudio_toolkit/tasks/model_setup/: normalize_space_names.py  set_space_surfacearea_height_volume.py
openstudio-mcp-server/openstudio_toolkit/tasks/results_analysis/: get_timeseries_from_sql.py
openstudio-mcp-server/openstudio_toolkit/utils/: notebook_helpers.py
openstudio-mcp-server/sample_files/models/: VGP-Montijo-009.osm
openstudio-mcp-server/scripts/: parse_and_export.py
openstudio_mcp_server/: __init__.py  config.py  openstudio_manager.py  server.py
openstudio_mcp_server/utils/: __init__.py  path_utils.py
openstudio_toolkit/osm_objects/: building_stories.py  component_curves.py  exterior_equipment.py  hvac_components.py  hvac_zone.py  loads.py  schedules.py  space_types.py  subsurfaces.py  surfaces.py
openstudio_toolkit/tasks/model_qa_qc/: calculate_wwr_by_space.py
openstudio_toolkit/tasks/model_setup/: rename_subsurfaces_based_on_space_and_surface_names.py  rename_surfaces_based_on_space_names.py
openstudio_toolkit/tasks/simulation_setup/: set_output_variables.py
openstudio_toolkit/utils/: __init__.py  eplus_utils.py  excel_utils.py  osm_utils.py
sample_files/models/: R2F-Office-Hub-006.osm
sample_files/weather/: .gitkeep
tests/: __init__.py  test_file_discovery.py
